# elog

./: CMakeLists.txt  README.md
include/clog/: async_logger_base.h  clog.h  common.h  formatter.h  logger.h
include/clog/details/: file_helper.h  flag_formatter.h  format_helper.h  log_msg.h  os.h
include/elog/elog/: async_logger.h  async_logger_base.h  common.h  elog.h  formatter.h  logger.h  logger_factory.h
include/elog/elog/details/: async_log_msg.h  file_helper.h  flag_formatter.h  format_helper.h  log_msg.h  os.h  threadpool.h
include/elog/elog/sinks/: console_mutex.h  null_mutex.h  rotating_file_sink.h  sink.h  std_color_sink.h  stdout_sink.h
tests/: CMakeLists.txt  example.cpp  main.cpp  test_formatter.cpp  test_multi_thread.cpp
